--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask
-gunicorn
-fake-useragent
-requests
-beautifulsoup4
-spacy
-scikit-learn
-numpy
-https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl
+Flask==2.3.3
+MarkupSafe==2.1.3
+fake-useragent==1.1.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+spacy==3.6.1
+sentence-transformers==2.2.2
+scikit-learn==1.3.2
+numpy==1.26.0
